[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecast"
description = "Wind power forecasting using machine learning"
version = "0.1.0"
authors = [
    { name = "Muhammad Owais Latif", email = "s250184@dtu.dk" },
    { name = "Dimitrios Tselios", email = "s243544@dtu.dk" },
    { name = "Miguel Matos", email = "s240178@dtu.dk" }
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-push-pray-1.git"
